--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,18 @@
           <artifactId>jackson-databind</artifactId>
           <version>2.8.7</version>
       </dependency>
+
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.1</version>
+    </dependency>
   </dependencies>
   
   <build>
