--- a/src/main/resources/mybatis/mappers/package.xml
+++ b/src/main/resources/mybatis/mappers/package.xml
@@ -1,60 +1,140 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-
-
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+
 <mapper namespace="package">
 
+    <!--패키지 카테고리 정보를 가져오는 SQL문-->
     <select id="select" resultType="PackageCateVo">
     <![CDATA[
-        select PackageCate_no,CateName,GroupCode,ParentCode,Depth from PackageCate;
+        select
+        PackageCate_no,
+        CateName,
+        GroupCode,
+        ParentCode,
+        Depth
+        from PackageCate
         ]]>
     </select>
+
+    <!--패키지 정보를 가져오는 SQL문-->
     <select id="selectpack" resultType="PackageVo">
     <![CDATA[
-        select Package_no,PackageCate_no,Availability,PackageName,Goal,Content,Qualification,TotalTime from Package;
+        select
+        Package_no,
+        PackageCate_no,
+        Availability,
+        PackageName,
+        Goal,
+        Content,
+        Qualification,
+        TotalTime
+        from Package
         ]]>
     </select>
+
+    <!--패키지 NO값을 받아서 해당하는 패키지 정보를 받아오는 SQL문-->
     <select id="selectonepack" parameterType="int" resultType="PackageVo">
     <![CDATA[
-        select Package_no,PackageCate_no,Availability,PackageName,Goal,Content,Qualification,TotalTime from Package where Package_no=#{no}
+        select
+        Package_no,
+        PackageCate_no,
+        Availability,
+        PackageName,
+        Goal,
+        Content,
+        Qualification,
+        TotalTime
+        from Package
+        where Package_no=#{no}
         ]]>
     </select>
-    <insert id="insert" parameterType="PackageVo" >
 
+    <!--패키지를 삽입하는 SQL문( 다음페이지에 이름과 총시간을 넘기기 위해 no값을 돌려받는다. )-->
+    <insert id="insert" parameterType="PackageVo" >
     <selectKey keyProperty="Package_no" resultType="Int" order="AFTER">
         <![CDATA[
-           select LAST_INSERT_ID() from dual
+           select LAST_INSERT_ID()
+           from dual
            ]]>
     </selectKey>
         <![CDATA[
-        insert into Package (Package_no,PackageCate_no,Availability,PackageName,Goal,Content,Qualification,TotalTime) values (#{Package_no},#{PackageCate_no},#{Availability},#{PackageName},#{Goal},#{Content},#{Qualification},#{TotalTime});
+        insert into Package
+        (Package_no,
+        PackageCate_no,
+        Availability,
+        PackageName,
+        Goal,
+        Content,
+        Qualification,
+        TotalTime)
+        values (
+        #{Package_no},
+        #{PackageCate_no},
+        #{Availability},
+        #{PackageName},
+        #{Goal},
+        #{Content},
+        #{Qualification},
+        #{TotalTime})
         ]]>
     </insert>
 
+    <!--단계을 삽입하기 위한 SQL문(바로 단계내의 과목삽입을 위해 no값을 돌려받는다)-->
     <insert id="insertstep" parameterType="StepInPackVo" >
 
         <selectKey keyProperty="Step_no" resultType="Int" order="AFTER">
             <![CDATA[
-           select LAST_INSERT_ID() from dual
+           select LAST_INSERT_ID()
+           from dual
            ]]>
         </selectKey>
         <![CDATA[
-        insert into StepInPack (Step_no,Package_no,StepName,Level) values (#{Step_no},#{Package_no},#{StepName},#{Level});
+        insert into StepInPack
+        (Step_no,
+        Package_no,
+        StepName,
+        Level)
+        values
+        (#{Step_no},
+        #{Package_no},
+        #{StepName},
+        #{Level})
         ]]>
     </insert>
+
+    <!--단계안의 과목을 삽입하기 위한 SQ문-->
     <insert id="insertsub" parameterType="SubInStepVo" >
           <![CDATA[
-        insert into SubInStep (Subject_no,Step_no,Content,SubHour) values ('16',#{Step_no},#{Content},#{SubHour});
+        insert into SubInStep
+        (Subject_no,
+        Step_no,
+        Content,
+        SubHour)
+        values
+        ('16',
+        #{Step_no},
+        #{Content},
+        #{SubHour})
         ]]>
     </insert>
+
+    <!--패키지 카테고리 삽입을 위한 SQL문-->
     <insert id="addcate" parameterType="PackageCateVo" >
         <![CDATA[
-        insert into PackageCate (ParentCode,CateName) values (#{PackageCate_no},#{CateName})
+        insert into PackageCate
+        (ParentCode,
+        CateName)
+        values
+        (#{PackageCate_no},
+        #{CateName})
         ]]>
     </insert>
+
+    <!--패키지 NO를 토대로 단계를 불러오는 SQL문-->
     <select id="getstep" parameterType="int">
         <![CDATA[
         select * from StepInPack value ()
         ]]>
     </select>
+
 </mapper>
