--- a/src/main/resources/mybatis/mappers/package.xml
+++ b/src/main/resources/mybatis/mappers/package.xml
@@ -143,7 +143,7 @@
         Content,
         SubHour)
         values
-        ('16',
+        (#{subject_no},
         #{Step_no},
         #{Content},
         #{SubHour})
