과목 완료 패키지 마무리중

--- a/src/main/resources/mybatis/mappers/package.xml
+++ b/src/main/resources/mybatis/mappers/package.xml
@@ -189,6 +189,15 @@
         PackageCate_no=#{pacageCate_no}
         ]]>
     </update>
+    <select id="getPackCate" parameterType="int" resultType="PackageCateVo">
+        select
+        PackageCate_no,
+        CateName
+        from
+        PackageCate
+        where
+        PAckageCate_no=#{no}
+    </select>
     <!--<update id="updateSub" parameterType= "SubInStepVo">-->
     <!--<![CDATA[-->
     <!--UPDATE SubInStep set-->
