application 오류 테스트 커밋

--- a/src/main/resources/mybatis/mappers/package.xml
+++ b/src/main/resources/mybatis/mappers/package.xml
@@ -219,7 +219,7 @@
         from
         PackageCate
         where
-        PAckageCate_no=#{no}
+        PackageCate_no=#{no}
     </select>
     <!--<update id="updateSub" parameterType= "SubInStepVo">-->
     <!--<![CDATA[-->
